# intellexia

./: .env.example  .gitignore  ARQUITETURA_RESUMO_DOCUMENTOS.md  CLAUDE.md  CORRECAO_FAP_REASON_ID.md  CORREÇÕES_FINAIS.md  DADOS_EXEMPLO.md  FAP_REVIEWER_TEMPERATURE_FIX.md  FAP_REVIEW_IMPLEMENTATION_COMPLETE.md  FAP_REVIEW_IMPLEMENTATION_FINAL.md  FAP_REVIEW_STATUS.md  GUIA_RAPIDO_COMENTARIOS.md  IMPLEMENTACAO_COMENTARIOS.md  MULTI_TENANT.md  PROGRESS.md  QUICKSTART_RESUMO_DOCUMENTOS.md  README.md  REDESIGN_FAP_REVIEW.md  REDESIGN_FAP_REVIEW_FINAL.md  RESUMO_DOCUMENTOS.md  RESUMO_IMPLEMENTACAO.md  TIMEZONE_FIX_SUMMARY.md  TRUNCATE_FAP.MD  TRUNCATE_PROCESS_PANEL.MD  add_ai_document_summaries_table.py  add_fap_reason_column.py  add_petition_file_path.py  agent_document_generator.py  agent_document_generator_new.py  agent_document_generator_old.py  banco.sql  clear_sample_data.py  cron.md  fix_process_numbers.py  form.py  kill.sh  main.py  migrate_add_law_firm_id.py  migrate_add_petitions_table.py  migrate_add_users_lawfirms.py  (+13 more)
.github/: copilot-instructions.md
app/: form.py  middlewares.py  models.py  petition_generator.py  routes.py  routes_backup.py
database/: README.md  add_accident_summary_column.py  add_agent_execution_history_table.py  add_agent_token_usage_extra_columns.py  add_agent_token_usage_table.py  add_ai_document_summaries_table.py  add_ai_model_settings_table.py  add_benefit_cat_bo_columns.py  add_benefit_cat_columns.py  add_benefit_contestation_decisions_table.py  add_benefit_dates_columns.py  add_benefit_fap_contestation_topics_json_column.py  add_benefit_fap_source_history_table.py  add_benefit_fap_vigencia_cnpjs_table.py  add_benefit_instance_status_raw_columns.py  add_benefit_manual_history_table.py  add_benefit_request_type.py  add_benefit_tipo_column.py  add_benefits_fap_contestation_topic_column.py  add_benefits_instance_decision_columns.py  add_benefits_status_justification_opinion_columns.py  add_benefits_table.py  add_case_status_table.py  add_case_templates_table.py  add_cases_knowledge_base_table.py  add_cat_employer_name_column.py  add_cat_history_tables.py  add_comments_tables.py  add_communications_monitoring.py  add_court_id_to_judicial_processes.py  add_employment_link_tables.py  (+111 more)
docker/: Dockerfile  (+9 more)
(+520 files in other folders)
