[project]
name = "ia-peticao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "docling>=2.69.1",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "langchain-openai>=1.1.6",
    "openai>=2.14.0",
    "python-docx>=1.2.0",
    "qdrant-client>=1.16.2",
]

[project.optional-dependencies]
production = [
    "pymysql>=1.1.0",
]
