[project]
name = "ia-peticao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "docling>=2.71.0",
    "docxcompose>=1.4.0",
    "docxtpl>=0.20.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=24.1.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "markitdown>=0.0.2",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=11.0.0",
    "pypandoc>=1.16.2",
    "python-docx>=1.2.0",
    "qdrant-client>=1.16.2",
    "requests>=2.32.3",
    "rich>=14.2.0",
    "sentence-transformers>=5.2.3",
    "zeep>=4.2.1",
]

[project.optional-dependencies]
production = [
    "pymysql>=1.1.0",
]
